Split access from other utilities